# image-dl

./: CLAUDE.md  README.md  pyproject.toml
src/image_dl/: __main__.py  browser.py  cli.py  downloader.py  models.py  naming.py  scraper.py  svg.py  tui.py
