[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-dl"
version = "0.1.1"
description = "Download all images from a webpage"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "playwright>=1.40",
    "rich>=13.0",
]

[project.scripts]
image-dl = "image_dl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/image_dl"]
